# ops

./: Cargo.toml  README.md
src/: docker_build.rs  eslint.rs  lib.rs  workspace_clippy.rs
src/docker/: Dockerfile.build_service  Dockerfile.fetch_rust_workspace_deps  Dockerfile.pre_build_rust_workspace_deps  Dockerfile.pre_build_service  base.Dockerfile  build.rs  build_rust_workspace.rs  fetch.Dockerfile  mod.rs  service.Dockerfile
src/git/: diff_name_status_since_branched.rs  mod.rs
